# omnifs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  ORCHESTRATION.md  PLAN.md  README.md  compose.ci.yaml  compose.yaml  demo.sh  demo.tape  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mount_tree.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs  mount.rs  path_key.rs  path_prefix.rs  registry.rs
crates/host/src/auth/: mod.rs
crates/host/src/cache/: l0.rs  l2.rs  mod.rs
crates/host/src/config/: mod.rs  schema.rs
crates/host/src/fuse/: inode.rs  mod.rs
crates/host/src/runtime/: activity.rs  browse_pipeline.rs  capability.rs  cloner.rs  correlation.rs  coverage.rs  executor.rs  git.rs  inflight.rs  invalidation.rs  manifest.rs  mod.rs
crates/host/tests/: auth_test.rs  cache_l0_test.rs  cache_l2_test.rs  cache_record_test.rs  capability_test.rs  config_test.rs  correlation_test.rs  git_executor_test.rs  provider_routes_test.rs  runtime_test.rs  schema_test.rs
crates/host/tests/support/: mod.rs
crates/omnifs-mount-schema/: Cargo.toml
crates/omnifs-mount-schema/examples/: dump_wasm.rs
crates/omnifs-mount-schema/src/: lib.rs
crates/omnifs-sdk/: Cargo.toml
crates/omnifs-sdk-macros/: Cargo.toml
crates/omnifs-sdk-macros/src/: config_macro.rs  handler_macro.rs  lib.rs  provider_macro.rs
crates/omnifs-sdk-macros/tests/: path_first_provider.rs
crates/omnifs-sdk/src/: async_runtime.rs  browse.rs  cache.rs  cx.rs  error.rs  git.rs  handler.rs  helpers.rs  http.rs  init.rs  lib.rs  prelude.rs  schema.rs
crates/omnifs-sdk/tests/: error_api_test.rs
design/: mutations-via-git.md  protocol-shape-handoff.md  protocol-shape.md
docs/future/: async-http.md
docs/superpowers/plans/: 2025-04-15-provider-router.md  2026-04-13-tiered-browse-cache.md
providers/: Cargo.toml
providers/dns/: Cargo.toml
providers/dns/src/: doh.rs  http_ext.rs  lib.rs  path.rs  provider.rs  query.rs  root.rs  segment.rs  types.rs
providers/dns/src/browse/: mod.rs  routing.rs
providers/github/: Cargo.toml
providers/github/src/: actions.rs  api.rs  events.rs  http_ext.rs  issues.rs  lib.rs  numbered.rs  owners.rs  path.rs  provider.rs  pulls.rs  repo.rs  root.rs  types.rs
providers/github/src/browse/: events.rs  files.rs  git.rs  mod.rs  resources.rs  routing.rs
providers/omnifs-provider-github/: Cargo.toml
providers/omnifs-provider-github/src/: cache.rs  lib.rs
providers/omnifs-provider-github/src/browse/: events.rs  files.rs  git.rs
providers/test/: Cargo.toml
providers/test/src/: lib.rs
scripts/: container-entrypoint.sh  demo.sh
wit/: provider.wit
