[workspace]
resolver = "2"
members = ["crates/*", "providers/github", "providers/test"]
default-members = ["crates/cli", "crates/host"]

[workspace.dependencies]
wasmtime = { version = "43", features = ["component-model", "runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
tempfile = "3"
libc = "0.2"
anyhow = "1"
redb = "2"
moka = { version = "0.12", features = ["sync"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
