[package]
name = "omnifs-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for mounting OmnIFS virtual filesystems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raulk/omnifs"
homepage = "https://github.com/raulk/omnifs"

[[bin]]
name = "omnifs"
path = "src/main.rs"

[dependencies]
omnifs-host = { path = "../host" }
omnifs-mount-schema = { path = "../omnifs-mount-schema" }
wasmparser = "0.246"
clap = { workspace = true }
dirs-next = "2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
