[package]
name = "omnifs-sdk-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for the omnifs provider SDK"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
omnifs-mount-schema = { path = "../omnifs-mount-schema" }

[dev-dependencies]
omnifs-sdk = { path = "../omnifs-sdk" }
tokio = { workspace = true }
trybuild = "1"
serde = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
