[package]
name = "omnifs-provider-github"
version = "0.1.0"
edition = "2024"
description = "OmnIFS provider for GitHub repository and issue browsing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raulk/omnifs"
homepage = "https://github.com/raulk/omnifs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
omnifs-sdk = { path = "../../crates/omnifs-sdk" }
hashbrown = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rc-zip-sync = { version = "4", default-features = false, features = ["deflate"] }

[package.metadata.component]
package = "omnifs:provider"

[package.metadata.component.target]
world = "provider"
path = "../../wit"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
match_same_arms = "allow"
