[package]
name = "omnifs-provider-github"
version = "0.1.0"
edition = "2024"
description = "OmnIFS provider for GitHub repository and issue browsing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raulk/omnifs"
homepage = "https://github.com/raulk/omnifs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = "0.41"
hashbrown = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[package.metadata.component]
package = "omnifs:provider"

[package.metadata.component.target]
world = "provider"
path = "../../wit"

[lints]
workspace = true
